nofi z-index to 3 and navigation glitch resolved"

--- a/app/css/cmsoon.css
+++ b/app/css/cmsoon.css
@@ -8,7 +8,7 @@
 
 
 body{
-    margin: 20px;
+    margin: 0px;
     padding: 0px;
     font-family: "Inter", serif;
     background-color: #F1F1F1;
@@ -26,7 +26,7 @@ body{
     font-size: 52px;
     text-align: center;
 }
-.cmsoon-container a{
+.cmsoon-container a ,.cmsoon-container button{
     background-color: #000E59;
     border:3px #00000000 solid;
     margin-top: 20px;
